--- a/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
@@ -55,6 +55,9 @@
                                 <state key="normal" title="GET STARTED">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="gZ3-Un-pyT" kind="show" id="GlT-su-Nve"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ON GOING ALL OUT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xmj-1F-eAG">
                                 <rect key="frame" x="57.5" y="215" width="260" height="36"/>
@@ -173,10 +176,22 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zag-l5-HEY">
+                                <rect key="frame" x="10" y="30" width="44" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="4TY-Xc-L6G"/>
+                                    <constraint firstAttribute="height" constant="33" id="xTg-tf-R8v"/>
+                                </constraints>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="ZdO-n8-2Ie" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="6eH-wy-g6H"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="hkd-Ea-ENq" firstAttribute="leading" secondItem="SYT-YB-Zha" secondAttribute="leading" constant="10" id="2bf-eb-Ya1"/>
+                            <constraint firstItem="Zag-l5-HEY" firstAttribute="leading" secondItem="SYT-YB-Zha" secondAttribute="leading" constant="10" id="2sJ-yw-Ho8"/>
                             <constraint firstItem="3EV-br-Ixu" firstAttribute="trailing" secondItem="SYT-YB-Zha" secondAttribute="trailing" id="6of-zA-nNs"/>
                             <constraint firstItem="hkd-Ea-ENq" firstAttribute="top" secondItem="ca7-oO-JrF" secondAttribute="bottom" constant="50" id="DjT-t6-Lsn"/>
                             <constraint firstItem="3EV-br-Ixu" firstAttribute="top" secondItem="dfW-L2-SA2" secondAttribute="top" id="OX8-lt-t00"/>
@@ -188,12 +203,14 @@
                             <constraint firstItem="SYT-YB-Zha" firstAttribute="trailing" secondItem="w2C-Sr-WZE" secondAttribute="trailing" constant="10" id="guG-j6-eQe"/>
                             <constraint firstItem="SYT-YB-Zha" firstAttribute="bottom" secondItem="w2C-Sr-WZE" secondAttribute="bottom" constant="20" id="id4-jg-2MF"/>
                             <constraint firstItem="SYT-YB-Zha" firstAttribute="trailing" secondItem="hkd-Ea-ENq" secondAttribute="trailing" constant="10" id="ouG-eH-qGn"/>
+                            <constraint firstItem="Zag-l5-HEY" firstAttribute="top" secondItem="SYT-YB-Zha" secondAttribute="top" constant="10" id="sCT-Oh-B0b"/>
                             <constraint firstItem="3EV-br-Ixu" firstAttribute="leading" secondItem="SYT-YB-Zha" secondAttribute="leading" id="wvq-Vb-9u5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SYT-YB-Zha"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oOm-k1-dJQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="ZdO-n8-2Ie" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="885.60000000000002" y="132.68365817091455"/>
         </scene>
@@ -292,6 +309,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
