Lesson 7 and 8 included here -- Controller files created and programmatic segue

--- a/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
+++ b/app-swoosh/app-swoosh/Base.lproj/Main.storyboard
@@ -16,10 +16,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--WelcomeVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomeVC" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -88,19 +88,15 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <connections>
-                        <outlet property="bgImg" destination="9lS-Pt-vO1" id="BKx-LF-9Tg"/>
-                        <outlet property="swoosh" destination="MaL-iO-nde" id="OCF-ty-nIf"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="140" y="132.68365817091455"/>
         </scene>
-        <!--View Controller-->
+        <!--LeagueVC-->
         <scene sceneID="sJp-cJ-BRh">
             <objects>
-                <viewController id="gZ3-Un-pyT" sceneMemberID="viewController">
+                <viewController id="gZ3-Un-pyT" customClass="LeagueVC" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dfW-L2-SA2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -137,6 +133,9 @@
                                 <state key="normal" title="NEXT">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="onNextTapped:" destination="gZ3-Un-pyT" eventType="touchUpInside" id="JsM-dm-N3N"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="hkd-Ea-ENq">
                                 <rect key="frame" x="10" y="158" width="355" height="190"/>
@@ -208,16 +207,19 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SYT-YB-Zha"/>
                     </view>
+                    <connections>
+                        <segue destination="OXd-JJ-Vt3" kind="show" identifier="skillVCSegue" id="Snd-UO-ZTq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oOm-k1-dJQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="ZdO-n8-2Ie" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="885.60000000000002" y="132.68365817091455"/>
         </scene>
-        <!--View Controller-->
+        <!--SkillVC-->
         <scene sceneID="u44-Br-fIB">
             <objects>
-                <viewController id="OXd-JJ-Vt3" sceneMemberID="viewController">
+                <viewController id="OXd-JJ-Vt3" customClass="SkillVC" customModule="app_swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JAp-YX-ebG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
